# img_classifier_prepare

./: .gitignore  README  classifier.cpp  classifier.h  classifier.pro  kvconfig.cpp  kvconfig.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  predicator.cpp  predicator.h  register_all.cpp
cfg.d/: action.txt  action.utf8.txt  catalogs.txt  catalogs2.txt  object.txt  object.utf8.txt  region.txt  region.utf8.txt  subject.txt  subject.utf8.txt  what.txt  what.utf8.txt  where.txt  where.utf8.txt  who.txt  who.utf8.txt
fine_tune/: dbhlp.py  fine_train.py  solver.prototxt  train_val.prototxt
image.d/: ren.sh
models/: boot.sh
tools/: README  img_mask.py  label_txt2json.py  labels.txt  make_catalog_dirs.py  make_cnn_space_test_samples.py  prepare_samples.py  prepare_test.py  prepare_train_val.py  subdir_to_labels.py
tools/train/: create_imagenet.sh  make_imagenet_mean.sh  solver.prototxt  train_val.prototxt
train/: boot.sh  labels.txt
video_analysis/: Makefile.am  configure.ac  imga.cpp  imga.h  va.cpp  video_source.cpp  video_source.h
web/: README  baserequest.py  batch.py  classifier.py  classifier_handlers.py  dbhlp.py  extract_image.py  fine_train.py  help.html  index.html  media2image.html  media2image.py  online_train.py  picstore.py  pred_url.py  retrain_index.html  runproc.py  server.py  session.py  showing.html  t.py  train_server.py  train_showing.html  training.py  usertask.py  video_cap.py  zip_send.sh
web/cfg/: config.json  solver0.prototxt  train_val.prototxt
web/fig/: test.py
